--- a/react/index.html
+++ b/react/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github Dashboard</title>
     <script src="https://unpkg.com/netlify-auth-providers"></script>
-    <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
-    <script>
+    <!-- <script src="https://code.jquery.com/jquery-1.11.2.js"></script> -->
+    <!-- <script>
         $(function () {
             $("#login").on("click", function (e) {
                 e.preventDefault();
@@ -20,15 +20,14 @@
                 });
             });
         });
-    </script>
+    </script> -->
 
 </head>
 
 <body>
-    <p><a href="#" id="login">Authenticate</a></p>
-    <p id="output"></p>
-    <!-- <div id="app"></div> -->
-    <!-- <script src="index.tsx"></script> -->
+
+    <div id="app"></div>
+    <script src="index.tsx"></script>
 </body>
 
 </html>
